Update configuration and web referenece with latest changes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40592

--- a/Mediation/Code/Mediation.Runtime/App.config
+++ b/Mediation/Code/Mediation.Runtime/App.config
@@ -60,7 +60,8 @@
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
         <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
         </parameters>
       </logger>
       <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
@@ -70,32 +71,24 @@
       <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings>
-
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=Mediation_Dev;User ID=development;Password=dev!123" />
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="MainDBConnString" connectionString="" />
     <add name="ConfigurationDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Dev_Configuration;User ID=development; Password=dev!123" />
     <add name="Mediation_GenericConfig_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Dev_Configuration;User ID=development; Password=dev!123;" providerName="System.Data.SqlClient" />
     <add name="Mediation_GenericRecord_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Dev;User ID=development; Password=dev!123;" providerName="System.Data.SqlClient" />
     <add name="LogDBConnString" connectionString="Initial Catalog=Mediation_Dev_Logging;Data Source=.;User ID=sa; Password=p@ssw0rd" />
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
-    <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Queueing;User ID=sa; Password=p@ssw0rd" />
-
-    <!--<add name="ConfigurationDBConnString" connectionString="Data Source=.;Database=Mediation_Online_Configuration;User ID=Mediation_Online_User; Password=Mediation_Online_User" />
-    <add name="Mediation_GenericConfig_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Configuration;User ID=Mediation_Online_User; Password=Mediation_Online_User" providerName="System.Data.SqlClient" />
-    <add name="Mediation_GenericRecord_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Dev;User ID=Mediation_Online_User; Password=Mediation_Online_User" providerName="System.Data.SqlClient" />
-    <add name="LogDBConnString" connectionString="Initial Catalog=Mediation_Online_Logging;Data Source=192.168.110.185;User ID=Mediation_Online_User; Password=Mediation_Online_User" />
-    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Transaction;User ID=Mediation_Online_User; Password=Mediation_Online_User" />
-    <add name="QueueItemDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Queueing;User ID=Mediation_Online_User; Password=Mediation_Online_User" />
-    <add name="MainDBConnString" connectionString="" />-->
+    <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Queueing;User ID=sa; Password=p@ssw0rd" />-->
   </connectionStrings>
 
   <!-- BEGIN CUSTOMER VARYING SECTION -->
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="TABS License" value="BF-2F-B4-CD-36-CB-1D-4B-8F-55-1C-F4-99-CD-1B-E8::==QMwkDM5EDMyYjM4ADNxAjM:kVGdwlncj5WR09mT"/>
     <add key="Mediation_GenericRecord_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
     <add key="Mediation_GenericConfig_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
     <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
     <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="BusinessProcessConfigDBConnStringKey" value="Mediation_GenericConfig_DBConnString"/>
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
@@ -104,7 +97,7 @@
     <add key="BCPDonotDeleteFiles" value="false"/>
     <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
     <add key="BusinessProcess_ActivityEventsTracking" value="false"/>
-    <add key="IsRuntimeService" value="false"/>
+    <add key="IsRuntimeService" value="true"/>
     <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString"/>
 
     <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
