--- a/Mediation/Code/Mediation.Web/Web.config
+++ b/Mediation/Code/Mediation.Web/Web.config
@@ -12,7 +12,8 @@
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
         <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
         </parameters>
       </logger>
       <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
@@ -22,26 +23,16 @@
     </exceptionLoggers>
   </vanriseLogging>
 
-  <!--<connectionStrings>
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=Mediation_Online;User ID=Mediaiton_Online_User;Password=Mediaiton_Online_User" />
-    <add name="ConfigurationDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Configuration;User ID=Mediaiton_Online_User;Password=Mediaiton_Online_User" />
-    <add name="Mediation_GenericConfig_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Configuration;User ID=Mediaiton_Online_User;Password=Mediaiton_Online_User" />
-    <add name="Mediation_GenericRecord_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Configuration;User ID=Mediaiton_Online_User;Password=Mediaiton_Online_User" />
-    <add name="LogDBConnString" connectionString="Initial Catalog=Mediation_Online_Logging;Data Source=192.168.110.185;User ID=Mediaiton_Online_User;Password=Mediaiton_Online_User" />
-    <add name="TransactionDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Transaction;User ID=Mediaiton_Online_User;Password=Mediaiton_Online_User" />
-    <add name="QueueItemDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Online_Queueing;User ID=Mediaiton_Online_User;Password=Mediaiton_Online_User" />
-  </connectionStrings>-->
-  
-  <connectionStrings>
-    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=Mediation_Dev;User ID=development;Password=dev!123" />
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="MainDBConnString" connectionString="" />
     <add name="ConfigurationDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Dev_Configuration;User ID=development; Password=dev!123" />
     <add name="Mediation_GenericConfig_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Dev_Configuration;User ID=development; Password=dev!123;" providerName="System.Data.SqlClient" />
     <add name="Mediation_GenericRecord_DBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Mediation_Dev;User ID=development; Password=dev!123;" providerName="System.Data.SqlClient" />
     <add name="LogDBConnString" connectionString="Initial Catalog=Mediation_Dev_Logging;Data Source=.;User ID=sa; Password=p@ssw0rd" />
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
-    <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Queueing;User ID=sa; Password=p@ssw0rd" />
+    <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Queueing;User ID=sa; Password=p@ssw0rd" />-->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
@@ -52,6 +43,7 @@
 
     <add key="Mediation_GenericRecord_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
     <add key="Mediation_GenericConfig_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="SecurityDBConnStringKey" value="Mediation_GenericConfig_DBConnString" />
     <add key="ConfigurationDBConnStringKey" value="Mediation_GenericConfig_DBConnString" />
     <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
