Data Parser HexTLV skeleton
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40596

--- a/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
@@ -46,8 +46,8 @@
     <Compile Include="HexTLV\HexTLVTagType.cs" />
     <Compile Include="HexTLV\RecordReader.cs" />
     <Compile Include="HexTLV\TagValueParser.cs" />
+    <Compile Include="ParserRecord\FldDictParsedRecord.cs" />
     <Compile Include="ParserTypeSettings\IDataParserInput.cs" />
-    <Compile Include="ParserRecord\ParsedBatch.cs" />
     <Compile Include="ParserRecord\ParsedRecord.cs" />
     <Compile Include="ParserTypeSettings\ParserTypeSettings.cs" />
     <Compile Include="ParserType\ParserType.cs" />
