adding references and new virtual directory (Samer )
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40600

--- a/Mediation/Code/Mediation.Web/Mediation.Web.csproj
+++ b/Mediation/Code/Mediation.Web/Mediation.Web.csproj
@@ -191,6 +191,24 @@
     <Reference Include="Vanrise.Data.SQL">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Data.SQL.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.DataParser.Business">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.DataParser.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.DataParser.Data">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.DataParser.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.DataParser.Data.SQL">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.DataParser.Data.SQL.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.DataParser.Entities">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.DataParser.Entities.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.DataParser.MainExtensions">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.DataParser.MainExtensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.DataParser.Web">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.DataParser.Web.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
