--- a/Mediation/Code/Mediation.Web/Web.config
+++ b/Mediation/Code/Mediation.Web/Web.config
@@ -33,6 +33,9 @@
     <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Queueing;User ID=sa; Password=p@ssw0rd" />-->
   </connectionStrings>
   <appSettings file="appSettings.config">
+
+    <add key="Web_ExtendedModulesNames" value="VR_DataParser"/>
+
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
