--- a/CarrierPortal/Code/CP.Ringo.Entities/CP.Ringo.Entities.csproj
+++ b/CarrierPortal/Code/CP.Ringo.Entities/CP.Ringo.Entities.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PortalAgentNumberRequestQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RingoRetailSettings.cs" />
   </ItemGroup>
