--- a/BusinessProcess/Code/Vanrise.Reprocess.BP.Arguments/Vanrise.Reprocess.BP.Arguments.csproj
+++ b/BusinessProcess/Code/Vanrise.Reprocess.BP.Arguments/Vanrise.Reprocess.BP.Arguments.csproj
@@ -55,6 +55,10 @@
       <Project>{eb3cf5aa-ec32-4723-81e5-c4a0c0525d05}</Project>
       <Name>Vanrise.BusinessProcess.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Queueing\Vanrise.Queueing.csproj">
+      <Project>{28eb3790-0e19-43ab-8ecb-6137eb0e588a}</Project>
+      <Name>Vanrise.Queueing</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Reprocess.Entities\Vanrise.Reprocess.Entities.csproj">
       <Project>{c0f57639-9df9-45fb-a97f-0d97cd8794d0}</Project>
       <Name>Vanrise.Reprocess.Entities</Name>
