--- a/BusinessProcess/Code/Vanrise.Reprocess.Business/Vanrise.Reprocess.Business.csproj
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Business/Vanrise.Reprocess.Business.csproj
@@ -60,9 +60,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReprocessBPDefinitionSettings.cs" />
     <Compile Include="ReprocessDefinitionManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.BusinessProcess.Business\Vanrise.BusinessProcess.Business.csproj">
+      <Project>{ce8a7fee-d6c7-43c6-851f-beba44b03b13}</Project>
+      <Name>Vanrise.BusinessProcess.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.BusinessProcess.Entities\Vanrise.BusinessProcess.Entities.csproj">
+      <Project>{eb3cf5aa-ec32-4723-81e5-c4a0c0525d05}</Project>
+      <Name>Vanrise.BusinessProcess.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Reprocess.BP.Arguments\Vanrise.Reprocess.BP.Arguments.csproj">
+      <Project>{61212fdd-0d51-41b8-96f2-0e0720b602d5}</Project>
+      <Name>Vanrise.Reprocess.BP.Arguments</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Reprocess.Data\Vanrise.Reprocess.Data.csproj">
       <Project>{b81d359d-0bf0-4f5b-8cf9-88a1ed84cf0f}</Project>
       <Name>Vanrise.Reprocess.Data</Name>
