Deleting Directive, Service and View Folders @Vanrise.GD.Web
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40623

--- a/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
@@ -596,11 +596,7 @@
     <Content Include="VR_GenericData\Views\GenericRule\GenericRuleManagement.html" />
     <Content Include="VR_GenericData\Views\GenericRule\GenericRuleManagementController.js" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="VR_GenericData\Elements\Notification\DataRecord\Directive\Templates\" />
-    <Folder Include="VR_GenericData\Elements\Notification\DataRecord\Services\APIServices\" />
-    <Folder Include="VR_GenericData\Elements\Notification\DataRecord\Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="VR_GenericData\Views\SummaryTransformationDefinition\SummaryGroupingColumnsEditor.html" />
