--- a/Mediation/Code/Mediation.Runtime/App.config
+++ b/Mediation/Code/Mediation.Runtime/App.config
@@ -97,7 +97,7 @@
     <add key="BCPDonotDeleteFiles" value="false"/>
     <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
     <add key="BusinessProcess_ActivityEventsTracking" value="false"/>
-    <add key="IsRuntimeService" value="true"/>
+    <add key="IsRuntimeService" value="false"/>
     <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString"/>
 
     <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
