--- a/Vanrise/Code/Vanrise.DataParser.Data/Vanrise.DataParser.Data.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Data/Vanrise.DataParser.Data.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.DataParser.Entities">
+      <HintPath>..\Output\Vanrise.DataParser.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
