--- a/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Entities/Vanrise.DataParser.Entities.csproj
@@ -53,7 +53,9 @@
     <Compile Include="ParserRecord\ParsedRecord.cs" />
     <Compile Include="ParserTypeSettings\ParserTypeSettings.cs" />
     <Compile Include="ParserType\ParserType.cs" />
+    <Compile Include="ParserType\ParserTypeDetail.cs" />
     <Compile Include="ParserType\ParserTypeExtendedSettingsConfig.cs" />
+    <Compile Include="ParserType\ParserTypeQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
