--- a/Vanrise/Code/Vanrise.DataParser.Web/Vanrise.DataParser.Web.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.Web/Vanrise.DataParser.Web.csproj
@@ -115,12 +115,18 @@
     <Folder Include="VR_DataParser\Elements\HexTLV\Directives\" />
     <Folder Include="VR_DataParser\Elements\HexTLV\Services\" />
     <Folder Include="VR_DataParser\Elements\HexTLV\Views\" />
-    <Folder Include="VR_DataParser\Elements\ParserType\Directives\" />
-    <Folder Include="VR_DataParser\Elements\ParserType\Services\" />
-    <Folder Include="VR_DataParser\Elements\ParserType\Views\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="VR_DataParser\Constants\ModuleConfig.js" />
+    <Content Include="VR_DataParser\Elements\ParserType\Directives\templates\ParserTypeGrid.html" />
+    <Content Include="VR_DataParser\Elements\ParserType\Directives\vr-dataparser-parsertype-grid.js" />
+    <Content Include="VR_DataParser\Elements\ParserType\Services\APIServices\ParserTypeAPIService.js" />
+    <Content Include="VR_DataParser\Elements\ParserType\Services\ParserTypeService.js" />
+    <Content Include="VR_DataParser\Elements\ParserType\Views\ParserTypeEditor.html" />
+    <Content Include="VR_DataParser\Elements\ParserType\Views\ParserTypeEditorController.js" />
+    <Content Include="VR_DataParser\Elements\ParserType\Views\ParserTypeManagement.html" />
+    <Content Include="VR_DataParser\Elements\ParserType\Views\ParserTypeManagementController.js" />
+    <Content Include="VR_DataParser\Elements\ParserType\Views\PTypeManagementController.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
