Add DID Synchronizer and Convertor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40649

--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <Compile Include="AccountActionManager.cs" />
     <Compile Include="AccountBalanceManager.cs" />
+    <Compile Include="Extensions\DIDSynchronizer.cs" />
     <Compile Include="ProductFamilyAddOrEditFilter.cs" />
     <Compile Include="ProductDefinitionAddOrEditFilter.cs" />
     <Compile Include="PackageDefinitionAddOrEditFilter.cs" />
