--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -98,6 +98,7 @@
     <Compile Include="DID\DIDQuery.cs" />
     <Compile Include="DID\DIDSettings.cs" />
     <Compile Include="DID\IDIDFilter.cs" />
+    <Compile Include="DID\SourceDIDData.cs" />
     <Compile Include="Package\Definition\PackageDefinitionFilter.cs" />
     <Compile Include="Package\IPackageFilter.cs" />
     <Compile Include="ProductFamily\ProductFamily.cs" />
