--- a/Retail/Code/Retail.Zajil.Web/Retail.Zajil.Web.csproj
+++ b/Retail/Code/Retail.Zajil.Web/Retail.Zajil.Web.csproj
@@ -120,6 +120,8 @@
     <Content Include="Retail_Zajil\Directives\MainExtensions\Account\Part\Runtime\Templates\AccountTypePartOrderDetailsRuntimeTemplate.html" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Account\retail-zajil-account-convertor-editor.js" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Account\Templates\AccountConvertorEditor.html" />
+    <Content Include="Retail_Zajil\Directives\MainExtensions\DID\retail-zajil-did-convertor-editor.js" />
+    <Content Include="Retail_Zajil\Directives\MainExtensions\DID\Templates\DIDConvertorEditor.html" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Payment\retail-zajil-payment-convertor-editor.js" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Payment\Templates\PaymentConvertorEditor.html" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\ZajilInvoiceSettings\retail-invoice-invoicetype-zajilsubscriberinvoicesettings.js" />
