--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CountryPreviewManager.cs" />
     <Compile Include="CodePreviewManager.cs" />
+    <Compile Include="Readers\ReadRatesToAddChanges.cs" />
     <Compile Include="SalePriceListsByOwner.cs" />
     <Compile Include="NumberingPlanHelper.cs" />
     <Compile Include="ZonePreviewManager.cs" />
