Update configuration files
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40688

--- a/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
+++ b/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
@@ -467,6 +467,8 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="appSettings.config" />
+    <Content Include="ConnectionStrings.config" />
     <None Include="Properties\PublishProfiles\CDRAnalysis.Web.pubxml" />
     <None Include="Web.config.exclude">
       <SubType>Designer</SubType>
