--- a/CDRAnalysis/CDRAnalysis.Web/Web.config
+++ b/CDRAnalysis/CDRAnalysis.Web/Web.config
@@ -12,7 +12,8 @@
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
         <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
         </parameters>
       </logger>
       <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
@@ -21,18 +22,16 @@
       <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings>
-
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CDRAnalysisConfiguration;User ID=development;Password=dev!123;"/>
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CDRAnalysisConfiguration;User ID=development;Password=dev!123;"/>
     <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisDev;User ID=development;Password=dev!123;"            providerName="System.Data.SqlClient" />
     <add name="TransactionDBConnString"    connectionString="Initial Catalog=FZeroTransaction;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
     <add name="LogDBConnString"            connectionString="Initial Catalog=FZeroLog;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
     <add name="QueueDBConnString"          connectionString="Initial Catalog=FZeroQueue;Data Source=.;User ID=sa;Password=p@ssw0rd"/>
     <add name="FraudAnalysis_CDRConnStringTemplateKey" connectionString="Initial Catalog=CDRAnalysisDev_CDR_{0};Data Source=192.168.110.185;User ID=development;Password=dev!123;"/>
-    <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = CDRBI2; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />
-
+    <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = CDRBI2; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />-->
   </connectionStrings>
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="OperatorType" value="1" />    <!--  1 =Mobile ,  2 = PSTN -->
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
