--- a/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
+++ b/CDRAnalysis/Vanrise.Fzero.DevRuntime/App.config
@@ -49,18 +49,18 @@
       </runtimeServiceGroup>
     </runtimeServiceGroups>
   </vanriseRuntime>
-  
-  <connectionStrings>
-    <add name="TransactionDBConnString"    connectionString="Initial Catalog=FZeroTransaction;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
+
+  <connectionStrings configSource="ConnectionStrings.config">
+    <!--<add name="TransactionDBConnString"    connectionString="Initial Catalog=FZeroTransaction;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
     <add name="LogDBConnString"            connectionString="Initial Catalog=FZeroLog;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
     <add name="QueueDBConnString"          connectionString="Initial Catalog=FZeroQueue;Data Source=.;User ID=sa;Password=p@ssw0rd"/>
     <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisDev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
     <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=CDRAnalysisConfiguration;User ID=development;Password=dev!123;"/>
     <add name="DWSDBConnString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisDW;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
-    <add name="FraudAnalysis_CDRConnStringTemplateKey" connectionString="Initial Catalog=CDRAnalysisDev_CDR_{0};Data Source=192.168.110.185;User ID=development;Password=dev!123;"/>
+    <add name="FraudAnalysis_CDRConnStringTemplateKey" connectionString="Initial Catalog=CDRAnalysisDev_CDR_{0};Data Source=192.168.110.185;User ID=development;Password=dev!123;"/>-->
   </connectionStrings>
 
-  <appSettings>
+  <appSettings file="appSettings.config">
     <add key="OperatorType" value="1" />    <!--  1 =Mobile ,  2 = PSTN -->
     <add key="RulesDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString"/>
@@ -80,7 +80,7 @@
     <add key="FraudAnalysis_CDRNormalPrefixLength" value="0"/>
     <add key="BusinessProcessConfigDBConnStringKey" value="ConfigurationDBConnString"/>
 
-    <add key="IsRuntimeService" value="false"/>
+    <add key="IsRuntimeService" value="true"/>
 
     <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
@@ -91,7 +91,8 @@
     <loggers>
       <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
         <parameters>
-          <parameter name="ConnectionStringKey" value="LogDBConnString" />
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
         </parameters>
       </logger>
       <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
