--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -127,7 +127,7 @@
     <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString" />
     <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString" />
     <add key="BusinessProcessConfigDBConnStringKey"             value="ConfigurationDBConnString" />
-    <add key="VR_AccountBalance_TransactionDBConnStringKey"     value="RetailDBConnString"/>
+    <add key="VR_AccountBalance_TransactionDBConnStringKey"     value="ConfigurationDBConnString"/>
     <add key="RulesDBConnStringKey"                             value="ConfigurationDBConnString"/>
     <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
