--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Entities/TOne.WhS.Deal.Entities.csproj
@@ -46,6 +46,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DealSaleZoneGroup.cs" />
+    <Compile Include="DealSupplierZoneGroup.cs" />
     <Compile Include="SwapDealAnalysis\Input\CalculateInboundRateInput.cs" />
     <Compile Include="SwapDealAnalysis\Input\CalculateOutboundRateInput.cs" />
     <Compile Include="SwapDealAnalysis\RateCalcMethod\Inbound\SwapDealAnalysisInboundItemRateCalcMethod.cs" />
